Corrected visibility changes

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,12 +10,14 @@
   justify-content: center;
   align-items: center;
   pointer-events: none;
+  visibility: hidden;
   opacity: 0;
-  transition: opacity 0.5s linear;
+  transition: opacity 0.5s linear, visibility 0.5s linear;
 }
 
 .modal_is-opened {
-  pointer-events: all;
+  visibility: visible;
+  pointer-events: auto;
   opacity: 1;
 }
 
